[package]
name = "rbattle"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]

[dependencies]
bytes = "0.4.3"
error-chain = "0.10.0"
futures = "0.1.13"
glium = "0.16.0"
rand = "0.3.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.6"
tokio-io = "0.1.1"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
