[package]
name = "rbattle"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]

[dependencies]
bytes = "0.4.10"
error-chain = "0.12.0"
futures = "0.1.24"
glium = "0.22.0"
rand = "0.5.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-codec = "0.1.0"
tokio-core = "0.1.17"
tokio-io = "0.1.8"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
